--- a/app.css
+++ b/app.css
@@ -6,3 +6,34 @@
   * https://github.com/andreacardybailey/responsive_example/blob/master/styles/responsive-base.css 
   *
 */
+
+body {
+  padding: 0;
+  margin: 0;
+}
+
+main {
+  display: flex;
+  justify-content: center;
+}
+
+h1 {
+  text-align: center;
+  padding-bottom: 25px;
+}
+
+.js-template {
+  background: green;
+  height: 400px;
+  width: 300px;
+}
+
+.button-wrap {
+  display: flex;
+  justify-content: center;
+  
+}
+
+.question {
+  text-align: center;
+}
